--- a/style.css
+++ b/style.css
@@ -10,14 +10,14 @@ body {
 .bandeira {
   width: 300px;
   height: 210px;
-  background-image: linear-gradient(-224deg, #00923F 31%, transparent 30%), linear-gradient(-44deg, #6699FE 58%, transparent 30%);
-  border: solid 5px #ddd;
-  border-radius: 6px;
-  box-shadow: 0px 0px 10px #333;
+  background-image: linear-gradient(-224deg, #00923f 31%, transparent 30%),
+    linear-gradient(-44deg, #6699fe 58%, transparent 30%);
+  border: solid 5px #f9f9f9;
+  box-shadow: 0px 0px 2px #333;
 }
 
 .estrela {
-  color: #FFFF00;
+  color: #ffff00;
   font-size: 68px;
   position: absolute;
   right: 25px;
